# swarmsh-v2

./: .gitignore  AGENT_FRAMEWORK_COMPLETE.md  AGENT_FRAMEWORK_INTEGRATION.md  API_REFERENCE.md  AUTO_8020_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_OPTIMIZATION.md  COMPLETION_SUMMARY.md  CRITICAL_ANALYSIS.md  Cargo.toml  DEMO_SCRIPT.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_ANALYSIS.md  DOCUMENTATION_IMPLEMENTATION_CHECKLIST.md  DOCUMENTATION_MAP.md  DOCUMENTATION_SUMMARY.txt  FMEA_ANALYSIS.md  FMEA_RISK_MITIGATION.md  FMEA_TESTING_GUIDE.md  FULL_CYCLE_ACHIEVEMENT_SUMMARY.md  GETTING_STARTED.md  Makefile  OUTREACH_CAMPAIGN.md  POKA_YOKE_GUIDE.md  PRODUCTIZATION.md  README.md  README_HONEST.md  REALITY_CHECK_ANALYSIS.md  RELEASE_v2.1.0.md  SALES_PAGE.md  SESSION_CHECKPOINT.md  SYSTEM_ANALYSIS_V2.md  TESTING_80_20.md  TROUBLESHOOTING.md  WEAVER-FORGE-MAXIMIZATION-PLAN.md  WEAVER-IMPLEMENTATION-STATUS.md  WEAVER_FORGE_IMPLEMENTATION.md  WEAVER_GENERATION_REPORT.md  auto-80-20.sh  (+30 more)
.github/workflows/: ci.yml
agents/: coordinator.json
benches/: worktree_benchmarks.rs
context/: README.md  current_session_summary.md  e2e_test_implementation.md  project_status.md
coordination/: active.json
docs/: 80-20-implementation.md  CHAIRMAN_BRIEF.md  FIRE_THE_STACK_PITCH.md  INVESTOR_MEMO.md
examples/: auto_8020_spec.yaml  bug_fix_work_spec.yaml  demo_auto_8020.sh  feature_work_spec.yaml  roberts_rules_demo.rs  simple_roberts_demo.rs  system_config.yaml  weaver_generation_demo.rs
exported-shell/: agent_swarm_orchestrator.sh  analytics_dlss.sh  coordination_helper.sh  demo_telemetry.json  e2e_test_suite.sh  health_monitor.sh  swarmsh_core.sh  swarmsh_enhanced.sh  swarmsh_telemetry.sh
scripts/: 80_20_tooling.sh  fix_otel_imports.sh  fix_weaver_validation.sh  run_comprehensive_tests.sh  test-weaver-templates.sh  test_shell_parity.sh  validate-weaver-generation.sh  validate_otel_weaver.sh  weaver-generate-demo.sh
semantic-conventions/: CLAUDE.md  registry_manifest.yaml  swarmsh-agent.yaml  swarmsh-analytics.yaml  swarmsh-auto-8020.yaml  swarmsh-automation.yaml  swarmsh-base.yaml  swarmsh-cli.yaml  swarmsh-coordination.yaml  swarmsh-health.yaml  swarmsh-infinite-loop.yaml  swarmsh-prompts.yaml  swarmsh-weaver-complete.yaml  swarmsh-work.yaml  swarmsh-worktree.yaml
shell-export/: telemetry_constants_demo.sh
src/: CLAUDE.md  ai_integration.rs  analytics.rs  auto_command.rs  const_generics.rs  coordination.rs  coordination_prompts.rs  demo_sprint.rs  health.rs  lib.rs  meta_programming.rs  meta_programming_demo.rs  ollama_weaver_pipeline.rs  phase1_critical_tests.rs  phase2_high_risk_tests.rs  phase3_medium_risk_tests.rs  phase4_production_hardening_tests.rs  proc_macros.rs  roberts_rules_integration.rs  scrum_at_scale_simulation.rs  shell_export.rs  telemetry.rs  telemetry_test.rs  template_metaprog.rs  tracing_config.rs  weaver_forge.rs  weaver_forge_test.rs  worktree_manager.rs
templates/: CLAUDE.md  agent_swarm_orchestrator.sh.tera  auto_8020_report.md.tera  cli_commands.rs.j2  cli_subcommands.rs.j2  coordination_helper.sh.tera  prompt_telemetry.rs.j2  shell_cli.sh.j2  swarmsh_automation.sh.tera  weaver_cli_commands.sh.j2  weaver_dlss_wave_exec.sh.j2  weaver_infinite_loop_runner.sh.j2  weaver_telemetry_span_emit.sh.j2  worktree_manager.sh.tera
templates/registry/docs/: semantic_conventions.md.j2
templates/registry/registry/: atomic_operations.j2  mod.rs.j2  simple_test.j2  span_builders.rs.j2  tests.rs.j2  validation.rs.j2  weaver.yaml
templates/registry/rust/: attributes.rs.j2  coordination_tests.j2  errors.rs.j2  events.rs.j2  integration_tests.rs.j2  metrics.rs.j2  realtime_coordination.j2  roberts_rules.j2  scrum_at_scale.j2  sdk_init.rs.j2
templates/registry/shell/: atomic_operations.sh.j2  metric_collection.sh.j2  realtime_coordination.sh.j2  roberts_rules.sh.j2  scrum_coordination.sh.j2  span_tracking.sh.j2  telemetry_export.sh.j2
test-semconv/: registry_manifest.yaml  test-agent.yaml
tests/: CLAUDE.md  ai_integration_tests.rs  basic_functionality.rs  coordination_integration_tests.rs  coordination_lifecycle_tests.rs  coordination_tests.rs  e2e_shell_export.rs  e2e_weaver_complete.sh  full_lifecycle_tests.rs  otel_weaver_validation_tests.rs  semantic_convention_validation_tests.rs  shell_export_integration_tests.rs  shell_script_validators.rs  weaver_forge_integration_tests.rs  worktree_lifecycle_tests.rs  zero_conflict_validation.rs
weaver-templates/rust/: attributes.j2
weaver-templates/shell/: telemetry_constants.sh.j2
work/: task_coordination.todo
